<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DashNotifier</string>
    <string name="service_name">DashNotifier</string>
    <string name="extension_count">11</string>
    <string name="extension_title">DashNotifier 1</string>
    <string name="extension_title2">DashNotifier 2</string>
    <string name="extension_title3">DashNotifier 3</string>
    <string name="extension_title4">DashNotifier 4</string>
    <string name="extension_title5">DashNotifier 5</string>
    <string name="extension_title6">DashNotifier 6</string>
    <string name="extension_title7">DashNotifier 7</string>
    <string name="extension_title8">DashNotifier 8</string>
    <string name="extension_title9">DashNotifier 9</string>
    <string name="extension_title10">DashNotifier 10</string>
    <string name="extension_title11">DashNotifier 11</string>
    <string name="notification_access_warn">Notification access is disabled. Tap the red alert symbol above to enable Notification access</string>
    <string name="notification_access_ok">Notification access is enabled</string>
    <string name="extension_description">Display notifications in Dashclock Widget</string>
    <string name="title_settings">DashNotifier Settings</string>
    <string name="title_list_preference">Choose Application</string>
    <string name="summary_list_preference">Application whose notification is displayed in DashClock</string>
    <string name="screen_preference_title">Turn screen on</string>
    <string name="screen_setting_on">Screen is turned on when notification is posted</string>
    <string name="screen_setting_off">Screen is not turned on arrival of notification</string>
    <string name="screen_behavior_preference">Screen behavior</string>
    <string name="proximity_preference">Check proximity</string>
    <string name="proximity_preference_summary">"Check phone's proximity sensor before turning screen on"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_app_select">Choose Application</string>
    <string name="proximityThreshold">4.0</string>
    <string name="unlock_on">Notification is cleared from DashClock on unlocking device</string>
    <string name="unlock_off">Notification is retained in DashClock until cleared from Notification shade</string>
    <string name="unlock_title">Clear on unlock</string>
    <string name="content_on_summary">Notification content, title and count are shown</string>
    <string name="content_off_summary">Only count and notification title are shown</string>
    <string name="content_title">Show notification content</string>
    <string name="setting_title1">Dashnotifier 1 Settings</string>
    <string name="setting_title2">Dashnotifier 2 Settings</string>
    <string name="setting_title3">Dashnotifier 3 Settings</string>
    <string name="setting_title4">Dashnotifier 4 Settings</string>
    <string name="setting_title5">Dashnotifier 5 Settings</string>
    <string name="setting_title6">Dashnotifier 6 Settings</string>
    <string name="setting_title7">Dashnotifier 7 Settings</string>
    <string name="setting_title8">Dashnotifier 8 Settings</string>
    <string name="setting_title9">Dashnotifier 9 Settings</string>
    <string name="setting_title10">Dashnotifier 10 Settings</string>
    <string name="setting_title11">Dashnotifier 11 Settings</string>
    <string name="icon_pref_summary">Icon displayed in DashClock</string>
    <string name="action_service">Service status</string>
    <string name="always_off_summary">Only showed when there are unread notifications</string>
    <string name="always_on_summary">This app persists in DashClock</string>
    <string name="always_title">Always show</string>
    <string name="always_count_off_summary">Count not shown when no notifications</string>
    <string name="always_count_on_summary">Count (0) shown when no notifications</string>
    <string name="always_count_title">Show count</string>
    <string name="show_ongoing_off_summary">Ongoing notifications from this app are not shown</string>
    <string name="show_ongoing_on_summary">Ongoing notifications from this app are shown</string>
    <string name="show_ongoing_title">Show ongoing notifications</string>
    <string name="text_pref_summary">Leave it blank for default behavior</string>
    <string name="text_pref_title">Extension title text</string>
    <string name="icon_pref_title">Choose icon</string>
    <string name="icon_picker_title">Choose icon source</string>
    <string name="icon_picker_dn_icons_title">DashNotifier icons</string>
    <string name="icon_picker_gallery_title">Gallery</string>
    <string name="icon_picker_pack_title">Icon pack</string>
    <string name="icon_picker_choose_icon_title">Choose icon</string>
    <string name="dn_provider_perm_desc">Allow access to notification stored by DashNotifier\'s content provider</string>
    <string name="dn_provider_perm_label">DashNotifier content provider access</string>
    <string name="content_preference">Content</string>
    <string name="dialog_title_list_preference">Extension title preference</string>
    <string name="ext_title_list_preference">Extension title format</string>
    <string name="stack_on_summary">Notification text is stacked, old content is shown</string>
    <string name="stack_off_summary">Only latest notification is shown</string>
    <string name="stack_title">Stack notification content</string>
    <string name="close">Close</string>
    <string name="other_pref">Other</string>
    <string name="about_title">About DashNotifier</string>
    <string name="market_title">View in Google Play</string>
    <string name="market_summary">Find this useful or have feedback? Please rate DashNotifier in Google Play</string>
    <string name="title_apps">Apps</string>
    <string name="title_shortcuts">Shortcuts</string>
    <string name="pref_shortcut_default">Default</string>
    <string name="click_behave_title">Click behavior</string>
    <string name="search_title">Search Applications</string>
    <string name="search_hint">Application name</string>
    <string name="iv_content_desc">Application Icon</string>
    <string name="ext_onoff_toast">Restart DashClock settings to see changes. You may have to swipe extensions away if you have disabled any.</string>
    <string name="number_on_summary">If present, number from right side of Notification is shown</string>
    <string name="number_off_summary">Number from right side of Notification is not shown</string>
    <string name="number_title">Show Number</string>
    <string name="notif_icon_on_summary">Notification\'s icon is used in DashClock. Overrides chosen icon.</string>
    <string name="notif_icon_off_summary">DashNotifier\'s icon preference used in DashClock</string>
    <string name="notif_icon_title">Use icon from notification</string>
    <string name="notif_icon_warn_always">Set icon to be used when there are no notifications</string>
    <string name="unlock_summary_api17"><i>If on, notification is cleared when device is unlocked. Other until clicked on DashClock</i></string>
    <string name="no_icon_packs">No supported Icon Packs found</string>
    <string name="about_body">
<![CDATA[
        Copyright 2013 Umang Vipul. DashNotifier is released under MIT license.<br>
        <a href="https://github.com/umanx/DashNotifier">Github</a><br><br>
        
        Many thanks to these awesome people:<br>
        <b><a href="https://play.google.com/store/apps/developer?id=UPpack">Milosch Lee</a></b><br>
        <i>for <a href="https://play.google.com/store/apps/details?id=com.uppack.stampedwhite">Stamped White Icons</a> set</i><br><br>
        <b><a href="https://plus.google.com/u/0/107094547764562810063/">Dima Skvarskyi</a></b><br>
        <i>for the application icon</i><br><br>
        <b>Massimiliano Guidi</b><br>
        <i>for Italian translation</i><br><br>
        <b>Javier García Olivares</b><br>
        <i>for Spanish translation</i><br><br>
		<b>Parthipan Rames</b><br>
        <i>for German translation</i><br><br>
        Many thanks to these open source projects:<br>
        <b><a href="https://code.google.com/p/dashclock/">DashClock Widget</a></b><br>
        <i>by Roman Nurik</i><br><br>
        <b><a href="https://github.com/keyboardsurfer/Crouton">Crouton</a></b><br>
        <i>by Benjamin Weiss</i>
    ]]>
    </string>
    <string name="accessiblity_description">DashNotifier Accessibility service to read notifications. Note that other accessibility events are not monitored and no data is sent anywhere other than DashClock</string>
    <string name="ext_count_dialog_title">Active Extensions</string>
    <!-- Do not translate the following -->
    <string name="default_title_pref" translatable="false">notif_nocount</string>
    <string name="app_name_and_version" translatable="false">
<![CDATA[
        <b>DashNotifier</b>&nbsp;<font color="#888888">v%1$s</font>
    ]]>
    </string>
    <string name="title_activity_click_intent">Click Intent Activity</string>

</resources>